errors.txt
srcs/main.cpp: In function ‘int main(int, const char**)’:
srcs/main.cpp:35:42: error: invalid conversion from ‘const char*’ to ‘char*’ [-fpermissive]
   35 |     std::vector<int> board = parse(argv[1]);
      |                                    ~~~~~~^
      |                                          |
      |                                          const char*
srcs/main.cpp:10:30: note:   initializing argument 1 of ‘std::vector<int> parse(char*)’
   10 | std::vector<int> parse(char *arg);
      |                        ~~~~~~^~~
srcs/main.cpp: In function ‘int main(int, const char**)’:
srcs/main.cpp:35:42: error: invalid conversion from ‘const char*’ to ‘char*’ [-fpermissive]
   35 |     std::vector<int> board = parse(argv[1]);
      |                                    ~~~~~~^
      |                                          |
      |                                          const char*
srcs/main.cpp:10:30: note:   initializing argument 1 of ‘std::vector<int> parse(char*)’
   10 | std::vector<int> parse(char *arg);
      |                        ~~~~~~^~~
